--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -64,20 +64,35 @@
 % new section
 \section{CONCLUSION}
 
-There are many metrics that can be used to evaluate a Software Development Organization (SDO). 
-Knowing which metrics to use and what they all mean can be a daunting task.  CRI is a
-proposed solution to the difficulty of measuring an SDO.
-
-Upon completion, this work shall identify:
-\begin{itemize}
-    \item Define \textbf{What} characteristics should be measured for an SDO
-    \item Define \textbf{How} to measure those characteristics
-    \item Map the relationship or lack of relationship with a Balanced Scorecard
-    \item Create a Framework to store the necessary data for CRI
-    \item Outline a Process to generate the CRI score
-    \item Provide an example CRI score with real data
-\end{itemize}
-
-An entire software development organization (SDO) needs to be measured and analyzed properly, not just the development portion. This document has provided an overview of what indicators need to be measured for an SDO, and how those indicators can be combined to form a single number indicating the performance score of a software development organization.  Also, a framework to store this data was discussed.
-
+    There are many metrics that can be used to evaluate a Software
+    Development Organization (SDO). The entire SDO needs to be measured 
+    and analyzed properly, not just the development portion. 
+    Knowing which metrics to use and what they all mean can be a daunting task.  
+    This work identified the Cumulative Result Indicator (CRI) which is a
+    proposed solution to the difficulty of measuring an SDO by creating a
+    single number score for upper-level management to use to quickly gauge
+    performance. 
+    
+    The following have all been provided in this work.
+    \begin{itemize}
+        \item CRI defines what 5 elements of an SDO should be measured.
+            Result indicators are included for quality, availability, satisfaction,
+            schedule, and requirements. 
+        \item CRI defines what data needs to be collected to create a 
+            score for the 5 elements.
+        \item CRI defines the formulas to create a score for the 5 elements.
+        \item A process was outlined to generate the CRI score.
+        \item An SDLC-AE was designed which includes a storage 
+            framework for the necessary CRI data.
+        \item A comparison with existing SDO evaluation techniques was presented.
+        \item Finally, an example CRI score was calculated with data provided by
+            an SDO organization within a large financial institution.
+    \end{itemize}
+    
+    Now SDOs have a technique to consistently measure performance over time.  CRI
+    should help upper-level management identify the areas of the organization
+    that need attention and those that do not.  CRI should save time required to 
+    evaluate the performance since the result is a single number.  
+    
+    
 \end{document}
