--- a/references.bib
+++ b/references.bib
@@ -925,9 +925,9 @@
 }
 @online{Swanstrom2015s,
     author = {Ryan Swanstrom},
-    title = {CRI Scores dissertation-scoring-sdo},
+    title = {CRI Scores for Dissertation},
     organization = {Sense},
-    url = {http://goo.gl/1ww9St},
+    url = {http://goo.gl/qHVZ6J},
     year = {2015},
     month = {3},
     notes = {R source code output}
